samples/_failures_safe/1761472319_71d3c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_808e5f88.c: In function ‘main’:
./samples/SAFE/__tmp_808e5f88.c:145:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  145 |     size_t compressed_size
      |     ^~~~~~
./samples/SAFE/__tmp_808e5f88.c:145:5: error: expected declaration or statement at end of input
